fix: Refactor components for consistent formatting and styles

--- a/src/components/LinkBtn/style.css
+++ b/src/components/LinkBtn/style.css
@@ -1,10 +1,10 @@
-.link_login {
+.link_btn {
     display: block;
     text-decoration: none;
     color: #79787e;
     font-size: 14px;
 }
 
-.link_login:hover {
+.link_btn:hover {
     color: #2a2931;
 }
